--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
 	<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 	<h2>Навигационная панель</h2>
-		<li class="nav-item"><a class="nav-link" href="/Internship/templates/header.html">Header</a></li>
+		<li class="nav-item"><a class="nav-link" href="/templates/header.html">Header</a></li>
 	<h2>Панель администратора</h2>	
-		<li class="nav-item"><a class="nav-link" href="/Internship/templates/admin/addBook.html">Добавление новой книги</a></li>
-		<li class="nav-item"><a class="nav-link" href="/Internship/templates/admin/editBook.html">Редактирование книги</a></li>
+		<li class="nav-item"><a class="nav-link" href="/templates/admin/addBook.html">Добавление новой книги</a></li>
+		<li class="nav-item"><a class="nav-link" href="/templates/admin/editBook.html">Редактирование книги</a></li>
 	<h2>Возможности интернет-пользователя</h2>	
-		<li class="nav-item"><a class="nav-link" href="/Internship/templates/listBooks.html">Просмотр кних по жанрам и авторам (установлен фильтр)</a></li>
-		<li class="nav-item"><a class="nav-link" href="/Internship/templates/showBook.html">Информация о книге</a></li>
-		<li class="nav-item"><a class="nav-link" href="/Internship/templates/order.html">Сделать заказ</a></li>
+		<li class="nav-item"><a class="nav-link" href="/templates/listBooks.html">Просмотр кних по жанрам и авторам (установлен фильтр)</a></li>
+		<li class="nav-item"><a class="nav-link" href="/templates/showBook.html">Информация о книге</a></li>
+		<li class="nav-item"><a class="nav-link" href="/templates/order.html">Сделать заказ</a></li>
 	</ul>
 </body>
 </html>
